--- a/inrows/index.html
+++ b/inrows/index.html
@@ -25,7 +25,7 @@
 			var lst2 = 0;
 			var lst = [0, 0, 0, 0, 0];
 			var pln = [0, "Player One", "Player Two"];
-			var cls = [0, "#9c6514", "#159e9e", "#159e15", "#9e9e15", "#DC143C", "#7B68EE", "#DB7093", "#f29340", "#2653a0"];
+			var cls = [0, "#306acf", "#DC143C", "#17b517", "#cbcb1a", "#17b5b5", "#7B68EE", "#DB7093", "#f29340", "#b57617"];
 			var clsav = [0, 1, 1, 0, 0, 0, 0, 0, 0, 0];
 			var cl1 = 1;
 			var cl2 = 2;
@@ -456,7 +456,7 @@
 							<div class="proftitle">
 								<p id="pl1n" onclick="settings(1)">Player One</p>
 							</div>
-							<div id="color1" class="color" style="background-color:#9c6514;">
+							<div id="color1" class="color" style="background-color:#306acf;">
 								<span>Color</span>
 							</div>
 							<div class="score">
@@ -484,7 +484,7 @@
 							<div class="proftitle">
 								<p id="pl2n" onclick="settings(2)">Player Two</p>
 							</div>
-							<div id="color2" class="color" style="background-color:#149c97;">
+							<div id="color2" class="color" style="background-color:#DC143C;">
 								<span>Color</span>
 							</div>
 							<div class="score">
@@ -511,7 +511,7 @@
 					<div style="height:15px;" id="custom_zone"><span id="customdim">Good Luck, Have Fun!</span><span id="customcol"></span><span id="custombt"></span><span id="customerr" style="color:#d24646;font-weight:bold;"></span></div>
 					<div id="credits" class="credits">
 						<h4>Created by Tudor Tarniceru</h4>
-						<h5>Beta(&beta;) Version</h5>
+						<h5>Version 1.0.0</h5>
 					</div>
 				</div>
 			</div>
