My Personal Website

--- a/inrows/index.html
+++ b/inrows/index.html
@@ -25,7 +25,7 @@
 			var lst2 = 0;
 			var lst = [0, 0, 0, 0, 0];
 			var pln = [0, "Player One", "Player Two"];
-			var cls = [0, "#306acf", "#DC143C", "#17b517", "#cbcb1a", "#17b5b5", "#7B68EE", "#DB7093", "#f29340", "#b57617"];
+			var cls = [0, "#306acf", "#DC143C", "#17b517", "#b5b517", "#17b5b5", "#7B68EE", "#DB7093", "#f29340", "#b57617"];
 			var clsav = [0, 1, 1, 0, 0, 0, 0, 0, 0, 0];
 			var cl1 = 1;
 			var cl2 = 2;
