--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div>
 				<div class="showcase" id="switch">
 					<div class="title"><p>Switch</p></div>
-					<div class="desc"><p><img src="data/switchs.jpg" style="border:1px solid black; display:table-cell;" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neigbours color.</p></div>
+					<div class="desc"><p><img src="data/switchs.jpg" style="border:1px solid black; display:table-cell;" height="170" width="170"><br><br>Switch is a puzzle game in which you are given 2 grids and must make them look the same by changing their elements.<br><br>Clicking on a square from the left grid will change its and its neighbours color.</p></div>
 					<div class="status">Recently Launched</div>
 					<div class="players">Singleplayer</div>
 					<div class="play"></p><a href="switch/index.html">Play Now</a></p></div>
